--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,25 +1,18 @@
 .mysearch {
   top: 0;
 }
-.bar-header-secondary .content {
+#content {
   position: absolute;
-  top: 1.4rem;
-}
-
-.bar-header-secondary~.content {
   top: 2.2rem;
 }
-
 .swiper-container {
   width: 100%;
   height: 8rem;
   img {
     width: 100%;
-    height: 100%;
-    display: block;
+    height: auto;
   }
 }
-
 .menu {
     .row {
         margin-top: 1rem;
@@ -37,6 +30,14 @@
             color: #222;
             font-size: .6rem;
         }
+    }
+}
+
+.list-title {
+    margin-bottom: 0;
+    img {
+        width:100%;
+        height:auto;
     }
 }
 
@@ -73,8 +74,4 @@
             }
         }
     }
-}
-
-.content-padded.list-title img {
-    width: 100%;
 }
