--- a/src/view/index.html
+++ b/src/view/index.html
@@ -101,6 +101,8 @@
 
 
 @@include('./common/script.html');
-<script src="js/index.js"></script>
+<script src="js/index.js">
+  
+</script>
 </body>
 </html>
