--- a/src/view/index.html
+++ b/src/view/index.html
@@ -13,6 +13,12 @@
     <div class="page page-current">
         <!-- 搜索框 -->
         @@include('./common/searchBar.html');
+
+        <!-- 底部工具栏 -->
+        @@include('./common/bottom-menu.html', {
+        "index": "active"
+        });
+
         <!--内容板块-->
         <div class="content" id="content">
             <!--轮播图-->
@@ -25,10 +31,7 @@
             <div id="listInfo"></div>
         </div>
 
-        <!-- 底部工具栏 -->
-        @@include('./common/bottom-menu.html', {
-            "current": "active"
-        });
+
     </div>
 </div>
 
@@ -36,11 +39,11 @@
 <script type="text/template" id="swiperTpl">
 
     <div class="swiper-wrapper">
-      {{each list}}
+        {{each list}}
         <div class="swiper-slide">
-          <img src="{{$value.image_url}}">
+            <img src="{{$value.image_url}}">
         </div>
-      {{/each}}
+        {{/each}}
     </div>
 
     <!-- 分页器 -->
@@ -51,58 +54,56 @@
 <script type="text/template" id="menuTpl">
     <div class="row">
         {{each list}}
-            <div class="col-20">
-                <a href="{{$value.href}}">
-                    <div>
-                        <img src="{{$value.img}}" alt="">
-                    </div>
-                    <div>{{$value.name}}</div>
-                </a>
-            </div>
+        <div class="col-20">
+            <a href="{{$value.href}}">
+                <div>
+                    <img src="{{$value.img}}" alt="">
+                </div>
+                <div>{{$value.name}}</div>
+            </a>
+        </div>
         {{if ($index + 1) % 5 === 0}}
     </div>
-        <div class="row">
+    <div class="row">
         {{/if}}
         {{/each}}
-        </div>
+    </div>
 </script>
 
 <!-- 列表模板 -->
 <script type="text/template" id="listTpl">
     {{each $data}}
-      <!-- 内容列表模板 -->
-      <div class="content-padded list-title">
+    <!-- 内容列表模板 -->
+    <div class="content-padded list-title">
         <img src="{{$value.group_img}}">
-      </div>
-      <div class="content-padded list-item">
+    </div>
+    <div class="content-padded list-item">
         <div class="row">
-          {{each $value.goods item}}
+            {{each $value.goods item}}
             <div class="col-50">
-              <div class="pic">
-                <img src="{{item.goods_big_logo}}">
-              </div>
-              <div class="name">{{item.goods_name}}</div>
-              <div class="price">
-                <span>¥ {{item.goods_price}}</span>
-                <a href="/goods-list.html?cid={{item.cat_id}}" class="button external">找相似</a>
-              </div>
+                <div class="pic">
+                    <img src="{{item.goods_big_logo}}">
+                </div>
+                <div class="name">{{item.goods_name}}</div>
+                <div class="price">
+                    <span>¥ {{item.goods_price}}</span>
+                    <a href="/goods-list.html?cid={{item.cat_id}}" class="button external">找相似</a>
+                </div>
             </div>
             {{if ($index + 1) % 2 == 0}}
-              </div>
-              <div class="row">
-            {{/if}}
-          {{/each}}
         </div>
-      </div>
+        <div class="row">
+            {{/if}}
+            {{/each}}
+        </div>
+    </div>
     {{/each}}
-  </script>
-
-
+</script>
 
 
 @@include('./common/script.html');
 <script src="js/index.js">
-  
+
 </script>
 </body>
 </html>
